create page add-products

--- a/app/add-products.html
+++ b/app/add-products.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Product List</title>
+    <title>Add Product</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
@@ -53,23 +53,54 @@
 
             <!-- Main Content -->
             <div id="content" class="container-fluid p-5">
-                
-                <div class="d-flex justify-content-between align-items-center mb-4">
-                    <h1 class="mt-4">Products</h1>
-                    <a href="add-products.html" class="btn btn-success">Create Item</a>
-                </div>
+                <h1 class="mt-4">Add Product</h1>
 
-                <!-- Product Cards Grid -->
-                <div id="products" class="row row-cols-1 row-cols-md-3 g-4">
-                    <!-- Product cards will be dynamically inserted here by list-products.js -->
-                </div>
+                <!-- Form to Add Product -->
+                <form id="addProductForm">
+                    <!-- Photo Field -->
+                    <div class="mb-3">
+                        <label for="productPhoto" class="form-label">Photo</label>
+                        <input type="file" class="form-control" id="productPhoto" accept="image/*" required>
+                    </div>
+
+                    <!-- Title Field -->
+                    <div class="mb-3">
+                        <label for="productTitle" class="form-label">Title</label>
+                        <input type="text" class="form-control" id="productTitle" placeholder="Enter product title" required>
+                    </div>
+
+                    <!-- Description Field -->
+                    <div class="mb-3">
+                        <label for="productDescription" class="form-label">Description</label>
+                        <textarea class="form-control" id="productDescription" rows="3" maxlength="100" placeholder="Enter product description (max 100 characters)" required></textarea>
+                        <small class="form-text text-muted">Maximum 100 characters.</small>
+                    </div>
+
+                    <!-- Price Field -->
+                    <div class="mb-3">
+                        <label for="productPrice" class="form-label">Price</label>
+                        <div class="input-group">
+                            <span class="input-group-text">$</span>
+                            <input type="number" class="form-control" id="productPrice" step="0.01" placeholder="Enter product price" required>
+                        </div>
+                    </div>
+
+                    <!-- Quantity Field -->
+                    <div class="mb-3">
+                        <label for="productQuantity" class="form-label">Quantity</label>
+                        <input type="number" class="form-control" id="productQuantity" placeholder="Enter product quantity" required>
+                    </div>
+
+                    <!-- Submit Button -->
+                    <button type="submit" class="btn btn-primary">Add Product</button>
+                </form>
             </div>
         </div>
     </div>
 
     <!-- Bootstrap JS and Custom JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="list-products.js"></script>
+    <script src="add-products.js"></script>
 </body>
 
 </html>
