--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,8 @@
             <div class="sidebar-heading border-bottom bg-light">Start Bootstrap</div>
             <div class="list-group list-group-flush">
                 <a class="list-group-item list-group-item-action list-group-item-light p-3" href="index.html">Home</a>
-                <a class="list-group-item list-group-item-action list-group-item-light p-3" href="list-products.html">List</a>
+                <a class="list-group-item list-group-item-action list-group-item-light p-3" href="list-products.html">Products</a>
+                <a class="list-group-item list-group-item-action list-group-item-light p-3" href="add-products.html">Add Product</a>
             </div>
         </div>
         <!-- Page content wrapper-->
